# Mason

./: .gitignore  CMakeLists.txt  dev-guidline.md  todo-list.txt
scripts/: setup-dev-env.bat
src/apps/JourneyToWest/: CMakeLists.txt
src/apps/JourneyToWest/src/: main.cpp
src/apps/JourneyToWest/src/items/: GroundItem.cpp  GroundItem.h
src/libs/core/: CMakeLists.txt  doc.md
src/libs/core/include/core/: IEventDispatcher.h  ILogicEngine.h  IRenderEngine.h  ISpaceTree.h  MAABBox.h  MApp.h  MCoreEngine.h  MEvent.h  MEventBus.h  MGame.h  MGameScene.h  MItem.h  MLog.h  MOcTree.h  MVector.h
src/libs/core/src/: ILogicEngine.cpp  IRenderEngine.cpp  LogicEngine.cpp  LogicEngine.h  MAABBox.cpp  MApp.cpp  MCoreEngine.cpp  MEvent.cpp  MEventBus.cpp  MGame.cpp  MGameScene.cpp  MItem.cpp  MLog.cpp  MOcTree.cpp  RenderEngine.cpp  RenderEngine.h
src/libs/core/test/: MAppNoPresetCfgTest.cpp  MAppPresetCfgInArgsTest.cpp  MAppPresetCfgInWDTest.cpp  MLogTest.cpp  main.cpp
src/libs/core/test/MAppTestWD/: config.json  presetCfgInArgsConfig.json
src/libs/win-export/: WinExport.h
